# BSP-OT

./: .gitignore  CMakeLists.txt  README.md
apps/: viz_playground.cpp
benchmarks/: README.md  benchmark_cpu_gpu.py  benchmark_matrix_3d.py
src/: BSPOTWrapper.h  BijectiveBSPMatching.h  GeneralBSPMatching.h  cuda_backend.cu  cuda_backend.h  cuda_backend_stub.cpp  resource_monitor.cpp  resource_monitor.h  telemetry.cpp  telemetry.h
